fixed featured boxes' hover issue on mobile devices, added animation to the image of 'Why Choose...' section, added hover effects and zoom icons to gallery images, added hover effects to the footer links.

--- a/inc/style.css
+++ b/inc/style.css
@@ -703,8 +703,13 @@ main {
 }
 
 @media (max-width: 575px) {
+  .featured-sec .grid .img-box > a,
   .featured-sec .grid .img-box img {
-    max-width: 100px;
+    width: 100px;
+  }
+
+  .featured-sec .common-card .img-box > a:before {
+    font-size: 20px;
   }
 }
 
@@ -1060,6 +1065,41 @@ main {
   grid-gap: 30px;
 }
 
+.gallery-sec .grid > .img-box {
+  overflow: hidden;
+  position: relative;
+  z-index: 9;
+}
+
+.gallery-sec .grid > .img-box.zoom:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url(../images/icons/zoom-icon.svg);
+  background-repeat: no-repeat;
+  background-size: 50px;
+  background-position: center;
+  background-color: rgb(0 0 0 / 0.25);
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.4s;
+  z-index: 99;
+}
+
+.gallery-sec .grid > .img-box.zoom:hover:before {
+  background-size: 75px;
+  opacity: 1;
+}
+
+.gallery-sec .grid > .img-box img {
+  transition: all 0.4s;
+}
+
+.gallery-sec .grid > .img-box img:hover {
+  transform: scale(1.1);
+}
+
 .gallery-sec .grid .insta-block {
   position: relative;
 }
@@ -1078,6 +1118,12 @@ main {
   background-color: rgba(255, 56, 119, 0.8);
   font-size: 48px;
   width: max-content;
+  transition: all 0.4s;
+}
+
+.gallery-sec .grid .insta-block .insta-follow-btn:hover {
+  background-color: rgba(255, 56, 119, 1);
+  border-radius: 20px;
 }
 
 .gallery-sec .grid .insta-block .insta-follow-btn span {
@@ -1100,6 +1146,11 @@ main {
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
+  transition: all 0.4s;
+}
+
+.vdo-box .play-btn:hover {
+  transform: scale(1.25);
 }
 
 @media (max-width: 767px) {
@@ -1175,6 +1226,11 @@ footer:before {
 .upper-footer ul li a {
   color: var(--site-black-color);
   text-decoration: none;
+  transition: all 0.4s;
+}
+
+.upper-footer ul li a:hover {
+  color: var(--site-primary-color);
 }
 
 .upper-footer .hours-block .hours {
